--- a/templates/presentation_start.html
+++ b/templates/presentation_start.html
@@ -52,14 +52,16 @@
         }
 
         .kriya-logo {
-            width: 200px;
-            margin: 2px auto;
+            width: 350px;
+            height: 250px;
+            margin: 0 auto;
+            margin-bottom: -20px !important;
         }
 
         .sub-text {
             font-style: italic;
             font-size: 14px;
-            margin-top: -20px !important;
+            margin-top: -40px !important;
         }
 
         .details {
