--- a/static/css/items_ppst.css
+++ b/static/css/items_ppst.css
@@ -42,9 +42,9 @@ td {
 }
 
 th {
-    background-color: #d9f7be;
+    background-color: #366156;
     /* Light pastel yellow */
-    color: #444;
+    color: #e9e1e1;
     font-weight: bold;
 }
 
@@ -68,7 +68,7 @@ button {
     padding: 10px 15px;
     font-size: 14px;
     color: #fff;
-    background-color: #d9f7be;
+    background-color: #366156;
     /* Warm pastel orange */
     border: none;
     border-radius: 4px;
@@ -78,17 +78,17 @@ button {
 }
 
 button:hover {
-    background-color: #d9f7be;
+    background-color: #366156;
     /* Slightly darker on hover */
 }
 
 a {
-    color: #d9f7be;
+    color: #366156;
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s;
 }
 
 a:hover {
-    color: #d9f7be;
+    color: #366156;
 }
