--- a/templates/presentation_detail.html
+++ b/templates/presentation_detail.html
@@ -72,16 +72,16 @@
                 </tr>
                 <tr>
                     <th>Name (Secretary 2)</th>
-                    <td><input type="text" name="secretary2_name" required></td>
+                    <td><input type="text" name="secretary2_name" ></td>
                 </tr>
                 <tr>
                     <th>Roll Number</th>
-                    <td><input type="text" name="secretary2_roll_number" required></td>
+                    <td><input type="text" name="secretary2_roll_number" ></td>
                 </tr>
                 <tr>
                     <th>Mobile No</th>
                     <td><input type="text" name="secretary2_mobile" pattern="\d{10}"
-                            title="Enter a 10-digit mobile number." required></td>
+                            title="Enter a 10-digit mobile number." ></td>
                 </tr>
             </table>
 
